<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Q1Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"

        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/circunferencia_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="23dp"
            android:layout_margin="20dp"
            android:text="@string/circunferencia_title" />

        <TextView
            android:id="@+id/circunferencia_raio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:layout_margin="10dp"
            android:text="@string/circunferencia_raio" />

        <EditText
            android:id="@+id/circunferencia_raio_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="Digite um raio"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/circunferencia_diametro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:layout_margin="15dp"
            android:text="@string/circunferencia_diametro" />

        <TextView
            android:id="@+id/circunferencia_diametro_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:layout_margin="8dp"
            android:text="@string/circunferencia_diametro_result" />

        <TextView
            android:id="@+id/circunferencia_comprimento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:layout_margin="10dp"
            android:text="@string/circunferencia_comprimento" />

        <TextView
            android:id="@+id/circunferencia_comprimento_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:layout_margin="10dp"
            android:text="@string/circunferencia_comprimento_result" />

        <TextView
            android:id="@+id/circunferencia_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:layout_margin="10dp"
            android:text="@string/circunferencia_area" />

        <TextView
            android:id="@+id/circunferencia_area_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="15dp"
            android:text="@string/circunferencia_area_result" />

        <Button
            android:id="@+id/calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/calculate" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>