<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Q4Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"

        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tabuada_soma_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/tabuada_soma_title"
            android:textColor="#FF03DAC5"
            android:textSize="27dp" />

        <TextView
            android:id="@+id/pergunta_Soma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="digite um numero a ser somado"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/tabuada_soma_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:ems="10"
            android:gravity="center"
            android:hint="digite um numero"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/tabuada_multiRE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:text="Resultado do somatório"
            android:textSize="19dp" />

        <TextView
            android:id="@+id/tabuada_soma_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:layout_margin="10dp"
            android:text="@string/tabuada_soma_result" />

        <Button
            android:id="@+id/calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/calculate" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>